# Todo

./: .gitignore
backend/: Cargo.toml
backend/migrations/: 20250213003431_todos.sql
backend/src/: main.rs
frontend/: package.json
frontend/src/: App.svelte
