[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
# axum
axum-error = "0.2.0"
axum = { version = "0.6", features = ["form"] }
tower-http = { version = "0.4.1", features = ["cors"] }
thiserror = "1.0"

# async
tokio = { version = "1.29", features = ["full"] }

# database
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }

# serialization
serde = { version = "1.0", features = ["derive"] }